--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3",
-    "resend": "^3.2.0"
+    "resend": "^3.2.0",
+    "vite": "^5.4.19"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -38,7 +39,6 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.19",
     "vite-plugin-compression": "^0.5.1"
   }
 }
