--- a/package.json
+++ b/package.json
@@ -13,20 +13,22 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
     "@types/qrcode": "^1.5.5",
+    "@vitejs/plugin-react": "^4.6.0",
     "lucide-react": "^0.344.0",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3",
     "resend": "^3.2.0",
-    "vite": "^5.4.19"
+    "rollup-plugin-visualizer": "^5.14.0",
+    "vite": "^5.4.19",
+    "vite-plugin-compression": "^0.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3",
-    "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.18",
     "dotenv": "^16.4.7",
     "eslint": "^9.9.1",
@@ -35,10 +37,8 @@
     "gh-pages": "^6.3.0",
     "globals": "^15.9.0",
     "postcss": "^8.4.35",
-    "rollup-plugin-visualizer": "^5.14.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
-    "typescript-eslint": "^8.3.0",
-    "vite-plugin-compression": "^0.5.1"
+    "typescript-eslint": "^8.3.0"
   }
 }
