--- a/netlify.toml
+++ b/netlify.toml
@@ -37,8 +37,8 @@
     Permissions-Policy = "camera=(), microphone=(), geolocation=(self)"
     Content-Security-Policy = """
       default-src 'self';
-      script-src 'self' 'sha256-HASH_PLACEHOLDER' data: blob: https://*.google.com https://*.googletagmanager.com https://*.google-analytics.com https://*.gstatic.com https://*.doubleclick.net;
-      script-src-elem 'self' data: blob: https://*.google.com https://*.googletagmanager.com https://*.google-analytics.com;
+      script-src 'self' 'unsafe-inline' data: blob: https://*.google.com https://*.googletagmanager.com https://*.google-analytics.com https://*.gstatic.com https://*.doubleclick.net;
+      script-src-elem 'self' 'unsafe-inline' data: blob: https://*.google.com https://*.googletagmanager.com https://*.google-analytics.com;
       style-src 'self' 'unsafe-inline' data: https://fonts.googleapis.com;
       font-src 'self' data: https://fonts.gstatic.com;
       img-src 'self' data: blob: https:;
